--- a/com222/src/app/footer/footer.component.css
+++ b/com222/src/app/footer/footer.component.css
@@ -3,6 +3,16 @@
     left: 0;
     bottom: 0;
     width: 100%;
-    background-color: blanchedalmond;
+    background-color: black;
     text-align: center;
+    color: #ffdd00;
+   
+}
+.beforeFooter{
+    height: 30px;
+    width: 100%;
+    background-color: #ffdd00;
+    text-align: center;
+    color: black;
+    margin-bottom: -21px;
 }
