--- a/com222/src/app/footer/footer.component.html
+++ b/com222/src/app/footer/footer.component.html
@@ -1,3 +1,6 @@
+<div class='beforeFooter'>
+    <h4 align='center' style="padding-top: 5px"><a (click)="goHome()">Home</a>    |    <a (click)="goAutor()">Autores</a>    |    <a (click)="goAboutUs()">Sobre nós</a></h4>
+</div>
 <div class='footer'>
     <h4 align='center' style="padding-top: 10px">Books Mall, apenas o melhor E-Commerce de Literatura</h4>
 </div>
