--- a/com222/src/app/grid-category/grid-category.component.html
+++ b/com222/src/app/grid-category/grid-category.component.html
@@ -7,7 +7,7 @@
                 <mat-card-subtitle>ISBN</mat-card-subtitle>
             </mat-card-header>
             <div align='center'>
-                <img mat-card-md-image
+                <img (click)="viewProduct()" mat-card-md-image
                     src="https://baldochi.unifei.edu.br/COM222/trabfinal/imagens/0131428985.01.THUMBZZZ.jpg"
                     alt="Photo of a Shiba Inu">
             </div>
