--- a/com222/src/app/nav-bar/nav-bar.component.css
+++ b/com222/src/app/nav-bar/nav-bar.component.css
@@ -1,7 +1,8 @@
 .nav{ 
-    background-color: blanchedalmond;
+    background-color:black;
     height: 40px; 
-    margin-top: -20px
+    margin-top: -20px;
+    color: #ffdd00;
 }
 .button-right{
     float: right;
