--- a/com222/src/app/product-detail/product-detail.component.html
+++ b/com222/src/app/product-detail/product-detail.component.html
@@ -3,7 +3,7 @@
         <mat-grid-tile [colspan]="2" [rowspan]="4">
             <mat-card-content>
                 <h2>Titulo do Livro</h2>
-                <h3>Autor do Livro</h3>
+                <h3 (click)="viewBooks(1)">Autor do Livro</h3>
                 <h3>Preço: R$ 30.00</h3>
                 <h4>ISBN</h4>
                 <h4>Edição: 5</h4>
