--- a/com222/src/app/app-home/app-home.component.html
+++ b/com222/src/app/app-home/app-home.component.html
@@ -3,3 +3,7 @@
 <app-product-detail *ngIf="productDetail"></app-product-detail>
 <app-grid-search [searchPass] = 'searchPass'  *ngIf="gridSearch"></app-grid-search>
 <app-grid-category [categoryId] = 'categoryId'  *ngIf="gridCategory"></app-grid-category>
+<app-autor *ngIf="autor"></app-autor>
+<app-about-us *ngIf="aboutUs"></app-about-us>
+<app-book-autor *ngIf="bookAutor" [autorId] = 'autorId'></app-book-autor>
+<app-footer></app-footer>
