--- a/com222/src/app/book-autor/book-autor.component.html
+++ b/com222/src/app/book-autor/book-autor.component.html
@@ -1,6 +1,7 @@
+<h2>Resultados do Autor: {{autorId}}</h2>
 <mat-grid-list cols="4" rowHeight="100px">
     <mat-grid-tile *ngFor="let tile of tiles" [colspan]="1" [rowspan]="4">
-        <mat-card  class="example-card">
+        <mat-card class="example-card">
             <mat-card-header>
                 <mat-card-title>Titulo do Livro</mat-card-title>
                 <mat-card-subtitle>ISBN</mat-card-subtitle>
