--- a/com222/src/styles.css
+++ b/com222/src/styles.css
@@ -2,3 +2,4 @@
 
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+.mat-card {background-color:#e0e0e0;}
