--- a/com222/src/app/autor/autor.component.html
+++ b/com222/src/app/autor/autor.component.html
@@ -1,11 +1,11 @@
 <mat-grid-list cols="4" rowHeight="100px">
-    <mat-grid-tile *ngFor="let tile of tiles" [colspan]="1" [rowspan]="4">
+    <mat-grid-tile *ngFor="let author of listAuthor" [colspan]="1" [rowspan]="2">
         <mat-card  class="example-card">
             <mat-card-header>
-                <mat-card-title>Nome do autor</mat-card-title>
+                <mat-card-title>{{author.nameF}} {{author.nameL}}</mat-card-title>
             </mat-card-header>
             <mat-card-actions align='center'>
-                <button mat-button (click)="viewBooks(1)">Veja mais detalhes</button>
+                <button mat-button (click)="viewBooks(author.AuthorID)">Veja mais detalhes</button>
             </mat-card-actions>
         </mat-card>
     </mat-grid-tile>
