--- a/com222/src/app/product-detail/product-detail.component.html
+++ b/com222/src/app/product-detail/product-detail.component.html
@@ -1,4 +1,4 @@
-<mat-card class="example-card" *ngFor='let book of listBooks'>
+<mat-card class="product" *ngFor='let book of listBooks'>
     <mat-grid-list cols="4" rowHeight="100px">
         <mat-grid-tile [colspan]="2" [rowspan]="8">
             <mat-card-content>
