add angular shopping cart

--- a/com222/src/app/book-autor/book-autor.component.html
+++ b/com222/src/app/book-autor/book-autor.component.html
@@ -12,7 +12,8 @@
                     alt="{{book.title}}">
             </div>
             <mat-card-content>
-                <p [innerHTML] = 'book.description'>
+                <p>
+                    <!-- {{book.description}} -->
                 </p>
             </mat-card-content>
             <h3 align='center'>Preço: R$ {{book.price}}</h3>
