--- a/com222/src/app/home-grid/home-grid.component.html
+++ b/com222/src/app/home-grid/home-grid.component.html
@@ -11,7 +11,8 @@
                     alt="{{book.title}}">
             </div>
             <mat-card-content>
-                <p [innerHTML] = 'book.description'>
+                <p>
+                    <!-- {{book.description}} -->
                 </p>
             </mat-card-content>
             <h3 align='center'>Preço: R$ {{book.price}}</h3>
