--- a/com222/src/styles.css
+++ b/com222/src/styles.css
@@ -2,5 +2,4 @@
 
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
-.example-card {background-color:#e0e0e0; width: 100%; height: 80%;}
-.product{background-color:#e0e0e0; }
+.mat-card {background-color:#e0e0e0;}
