--- a/com222/src/app/history/history.component.html
+++ b/com222/src/app/history/history.component.html
@@ -3,20 +3,14 @@
 <table class="carrinho" align="center" style="padding-top:40px; margin-bottom: 50px">
 	<thead>
 		<tr>
-			<th>#</th>
-			<th>Item</th>
-			<th>Preço (un.)</th>
-			<th>Quantidade</th>
-			<th>PREÇO</th>
+			<th>Códido pedido</th>
+			<th>Data</th>
 		</tr>
 	</thead>
 	<tbody>
-		<tr>
-			<td><img src="" width="50" alt="Avatar"></td>
-			<td>Livro 1</td>
-			<td>$37.50</td>
-			<td>2x</td>
-			<td class="price">$75.00</td>
+		<tr *ngFor='let order of order'>
+			<td>{{order.orderID}}</td>
+			<td>{{order.orderdate}}</td>
 		</tr>
 
 	</tbody>
