--- a/com222/src/app/product-detail/product-detail.component.html
+++ b/com222/src/app/product-detail/product-detail.component.html
@@ -23,6 +23,6 @@
         </mat-grid-tile>
     </mat-grid-list>
     <mat-card-actions align='center'>
-        <button mat-button >Adicionar ao Carrinho</button>
+        <button mat-button (click) = "addCart(book)">Adicionar ao Carrinho</button>
     </mat-card-actions>
 </mat-card>
