--- a/com222/src/app/user-data/user-data.component.html
+++ b/com222/src/app/user-data/user-data.component.html
@@ -1,34 +1,23 @@
-Se o e-mail já estiver cadastrado... 
-<div align="center">
-	<h2>Finalizar Compra?</h2>
-	Confirme a veracidade dos seus dados!<br><br>
-	<form action="action_page.php">
-		<label for="fname">Campo 1</label><br>
-		<input type="text" id="" name="" placeholder="Campo 1" disabled><br>
-		<label for="fname">Campo 2</label><br>
-		<input type="text" id="" name="" placeholder="Campo 2" disabled><br>
-		<label for="fname">Campo 3</label><br>
-		<input type="text" id="" name="" placeholder="Campo 3" disabled><br>
-
-		<input type="button" class="btn" align="center" value="Finalizar" (click)="goHistory()">
-
-	</form>
-</div>
-
-Se NÃO estiver cadastrado...
-
 <div align="center">
 	<h2>Finalizar Compra?</h2>
 	Cadastre seus dados para finalizar a compra!<br><br>
 	<form action="action_page.php">
-		<label for="fname">Campo 1</label><br>
-		<input type="text" id="" name="" placeholder="Campo 1" ><br>
-		<label for="fname">Campo 2</label><br>
-		<input type="text" id="" name="" placeholder="Campo 2" ><br>
-		<label for="fname">Campo 3</label><br>
-		<input type="text" id="" name="" placeholder="Campo 3" ><br>
+		<label for="fname">Nome</label><br>
+		<input type="text" [(ngModel)]='fname' name="fname" placeholder="Nome"><br>
+		<label for="lname">Sobrenome</label><br>
+		<input type="text" [(ngModel)]='lname' name="lname" placeholder="Sobrenome"><br>
+		<label for="email">Email</label><br>
+		<input type="text" [(ngModel)]='email' name="email" placeholder="Email"><br>
+		<label for="street">Rua</label><br>
+		<input type="text" [(ngModel)]='street' name="street" placeholder="Rua"><br>
+		<label for="city">Cidade</label><br>
+		<input type="text" [(ngModel)]='city' name="city" placeholder="Cidade"><br>
+		<label for="state">Estado</label><br>
+		<input type="text" [(ngModel)]='state' name="state" placeholder="Estado"><br>
+		<label for="zip">CEP</label><br>
+		<input type="text" [(ngModel)]='zip' name="zip" placeholder="CEP"><br>
 
-		<input type="button" class="btn" align="center" value="Finalizar" (click)="goHistory()">
+		<input type="button" class="btn" align="center" value="Finalizar" (click)="finishOrder()">
 
 	</form>
 </div>
