--- a/com222/src/app/nav-bar/nav-bar.component.html
+++ b/com222/src/app/nav-bar/nav-bar.component.html
@@ -4,11 +4,8 @@
         <button mat-button (click)="goShoppingCart()">
             <i class="material-icons" >shopping_cart</i> Carrinho
         </button>
-        <button mat-button [matMenuTriggerFor]="menu"><i class="material-icons">face</i> Minha Conta</button>
-        <mat-menu #menu="matMenu">
-            <button mat-menu-item>Item 1</button>
-            <button mat-menu-item>Item 2</button>
-        </mat-menu>
+        <button (click)="goHistory()" mat-button><i class="material-icons">face</i> Minha Conta</button>
+    
     </div>
 </div>
 
